name:                shared-space
version:             0.1.0.0
synopsis:            Disk use visualization tool
description:         Assembles charts showing space usage with annotations for shared usage between trees of hard-linked files.
license:             BSD3
license-file:        LICENSE.md
author:              Emily Backes
maintainer:          lucca@accela.net
copyright:           © 2016 Emily Backes
Category:            Systems
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable shared-space
  main-is:             Main.hs
  -- other-extensions:
  build-depends:
                base >=4.7 && < 5,
                containers,
                system-fileio,
                system-filepath,
                transformers,
                unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
